    Local asserting of clauses for new predicates is now always allowed.

    Updated the implementation of the built-in method abolish/1 in order to
    also support abolishing of local dynamic predicates.

    Improved the performance of source file compilation by avoiding redundant
    cleaning of auxiliary compilation predicates.

    Modified the Logtalk compiler in order to interpret occurrences of":" in
    module meta-predicate directives as equivalent to "::" instead of "0" in
    Logtalk meta-predicate directives. This change follows the current trend
    for de facto standardization for meta-predicate directives.

    Improved compiler error checking for entity relations, detecting and
    reporting most incorrect attempts to extend, instantiate, specialize,
    import, implement, or complement the wrong kind of entities.

    Corrected a bug where the compilation (or dynamic creation) of parametric
    objects or parametric categories with instantiated parameters would fail
    to discard the parameter values in the runtime tables of defined entities.

    Updated the implementation of the directives dynamic/1, discontiguous/1,
    and multifile/1 in order to remove explicit module qualification from the
    predicate indicator arguments when the module is "user".

    Updated the compilation of clause heads for module multifile predicates
    in order to remove the explicit module qualification when the module is
    "user".

    Updated the implementation of the built-in predicate logtalk_compile/2
    in order to ensure the same compiler options semantics for compiled code
    as the built-in predicate logtalk_load/2.

    Corrected a error handling issue in the implementation of the built-in
    predicates logtalk_compile/2 and logtalk_load/2 where the error terms
    would be wrapped in an extra error/2 term.

    Updated the Logtalk compiler in order to also delete the intermediate